--- a/catch-of-the-day/package.json
+++ b/catch-of-the-day/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "devDependencies": {
     "concurrently": "4.1.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "prettier": "^1.16.4",
     "react-scripts": "^2.1.1"
   },
   "dependencies": {
