--- a/catch-of-the-day/.eslintrc.json
+++ b/catch-of-the-day/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-    "extends": "airbnb"
+  "env": {
+    "browser": true
+  },
+  "extends": ["airbnb", "prettier"],
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": ["warn"]
+  }
 }
