--- a/catch-of-the-day/.eslintrc.json
+++ b/catch-of-the-day/.eslintrc.json
@@ -2,9 +2,15 @@
   "env": {
     "browser": true
   },
-  "extends": ["airbnb", "prettier"],
+  "extends": [
+    "airbnb",
+    "prettier",
+    "prettier/react",
+    "plugin:prettier/recommended"
+  ],
   "plugins": ["prettier"],
   "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "prettier/prettier": ["warn"]
   }
 }
