--- a/catch-of-the-day/package.json
+++ b/catch-of-the-day/package.json
@@ -21,6 +21,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.2.2",
+    "react-router-prop-types": "^1.0.4",
     "react-transition-group": "^2.2.1",
     "serve": "^10.1.1",
     "stylus": "0.54.5"
